{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 21,
  "lineage": "959c3df1-dee0-4fb3-be6b-93fafe6d92bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fe71de6f2bab5fbf",
            "arn": "arn:aws:ec2:eu-north-1:971247113371:instance/i-04ee77b643a23f9c0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ee77b643a23f9c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "MK-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bc22f71f8f9bb423"
              }
            ],
            "primary_network_interface_id": "eni-0bc22f71f8f9bb423",
            "private_dns": "ip-10-0-0-149.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.149",
            "public_dns": "ec2-51-21-220-111.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.220.111",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079db8266545d597e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1a8150d8bff746a",
            "tags": {
              "Name": "MK-instance"
            },
            "tags_all": {
              "Name": "MK-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094127ec7166eb6f9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "i-04ee77b643a23f9c0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.mk",
            "aws_security_group.mk_sg",
            "aws_subnet.public",
            "aws_vpc.hellocloud",
            "data.aws_ami.ubuntu",
            "tls_private_key.mk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:971247113371:internet-gateway/igw-0361d9e63fc06fc3d",
            "id": "igw-0361d9e63fc06fc3d",
            "owner_id": "971247113371",
            "region": "eu-north-1",
            "tags": {
              "Name": "MK-igw"
            },
            "tags_all": {
              "Name": "MK-igw"
            },
            "vpc_id": "vpc-0dcc65fb4fd38df86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "igw-0361d9e63fc06fc3d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mk_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:971247113371:route-table/rtb-0ad91eb25494b4e98",
            "id": "rtb-0ad91eb25494b4e98",
            "owner_id": "971247113371",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0361d9e63fc06fc3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dcc65fb4fd38df86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "rtb-0ad91eb25494b4e98",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0491c34ebc99710b4",
            "region": "eu-north-1",
            "route_table_id": "rtb-0ad91eb25494b4e98",
            "subnet_id": "subnet-0e1a8150d8bff746a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "rtbassoc-0491c34ebc99710b4",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.mk_rtb",
            "aws_subnet.public",
            "aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:971247113371:security-group/sg-094127ec7166eb6f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094127ec7166eb6f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MK-sg",
            "name_prefix": "",
            "owner_id": "971247113371",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MK-sg"
            },
            "tags_all": {
              "Name": "MK-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcc65fb4fd38df86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "sg-094127ec7166eb6f9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:971247113371:subnet/subnet-0e1a8150d8bff746a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a8150d8bff746a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971247113371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "MK-public-subnet"
            },
            "tags_all": {
              "Name": "MK-public-subnet"
            },
            "vpc_id": "vpc-0dcc65fb4fd38df86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "subnet-0e1a8150d8bff746a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:971247113371:vpc/vpc-0dcc65fb4fd38df86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce03495f42330fb0",
            "default_route_table_id": "rtb-0847859b66059be38",
            "default_security_group_id": "sg-098bd3faab92e32db",
            "dhcp_options_id": "dopt-08722203487900ef9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcc65fb4fd38df86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0847859b66059be38",
            "owner_id": "971247113371",
            "region": "eu-north-1",
            "tags": {
              "Name": "MK-vpc-eu-north-1",
              "environment": "MK_Test"
            },
            "tags_all": {
              "Name": "MK-vpc-eu-north-1",
              "environment": "MK_Test"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "971247113371",
            "id": "vpc-0dcc65fb4fd38df86",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}